# clypsalot

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  author.cxx  test.cxx
clypsalot/: CMakeLists.txt  catalog.cxx  catalog.hxx  clypsalot.dox  error.cxx  error.hxx  event.cxx  event.hxx  forward.hxx  logger.hxx  logging.cxx  logging.hxx  macros.hxx  message.cxx  message.hxx  module.cxx  module.hxx  network.cxx  network.hxx  object.cxx  object.dox  object.hxx  port.cxx  port.hxx  property.cxx  property.hxx  thread.cxx  thread.hxx  util.cxx  util.hxx
cmake/: boost.cmake  dependencies.cmake  testing.cmake
doc/: README.md  guidelines.md
gui/: CMakeLists.txt  catalog.cxx  catalog.hxx  createobjectdialog.cxx  createobjectdialog.hxx  createobjectdialog.ui  data.cxx  data.hxx  forward.hxx  logger.hxx  logging.hxx  logwindow.cxx  logwindow.hxx  logwindow.ui  main.cxx  main.hxx  mainwindow.cxx  mainwindow.hxx  mainwindow.ui  object.cxx  object.hxx  object.old.hxx  objectproperties.cxx  objectproperties.hxx  util.cxx  util.hxx  workarea.cxx  workarea.hxx  workarea.old.cxx
test/: CMakeLists.txt
test/integration/: object.cxx
test/lib/: test.cxx  test.hxx
test/module/: module.cxx  module.hxx  object.cxx  object.hxx  port.cxx  port.hxx
test/unit/: logging.cxx  message.cxx  object.cxx  port.cxx  property.cxx  test.cxx  thread.cxx  util.cxx
